--- a/app/src/main/res/layout/header_navigation_drawer.xml
+++ b/app/src/main/res/layout/header_navigation_drawer.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:fitsSystemWindows="true"
+
     android:background="@drawable/background"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -13,9 +14,9 @@
         android:layout_height="80dp"
         android:scaleType="centerInside"
         android:adjustViewBounds="true"
-        android:layout_marginTop="32dp"
         app:srcCompat="@drawable/component_2"
-        android:layout_margin="12dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="32dp"
         app:layout_goneMarginTop="?attr/actionBarSize"
         app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,7 +30,8 @@
         android:textColor="@color/white"
         android:textSize="21sp"
         android:layout_marginTop="18dp"
-        app:layout_constraintStart_toStartOf="@id/profile_picture_navigation"
+        android:layout_marginStart="16dp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/profile_picture_navigation"/>
 
     <TextView
@@ -40,7 +42,8 @@
         android:textSize="14sp"
         android:textColor="@color/white"
         android:layout_marginBottom="24dp"
+        android:layout_marginStart="16dp"
         app:layout_constraintTop_toBottomOf="@id/user_name_navigation"
-        app:layout_constraintStart_toStartOf="@id/user_name_navigation"/>
+        app:layout_constraintStart_toStartOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
