--- a/app/src/main/res/layout/fragment_products.xml
+++ b/app/src/main/res/layout/fragment_products.xml
@@ -36,6 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:visibility="gone"
             android:paddingHorizontal="8dp">
 
             <TextView
@@ -109,7 +110,7 @@
             app:endIconMode="clear_text"
             tools:hint="Search"
             android:visibility="gone"
-            tools:visibility="gone"
+            tools:visibility="visible"
             app:layout_constraintTop_toBottomOf="@id/toolbar">
 
             <com.google.android.material.textfield.TextInputEditText
