--- a/app/src/main/res/layout/bottom_sheet_new_product.xml
+++ b/app/src/main/res/layout/bottom_sheet_new_product.xml
@@ -179,6 +179,7 @@
             style="@style/MyCancelButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textAllCaps="false"
             android:text="@string/cancel" />
 
         <Button
@@ -186,6 +187,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/MyOkButtonStyle"
+            android:textAllCaps="false"
             android:text="@string/save"/>
 
     </LinearLayout>
