--- a/app/src/main/res/layout/dialog_new_category.xml
+++ b/app/src/main/res/layout/dialog_new_category.xml
@@ -71,6 +71,7 @@
         android:layout_height="wrap_content"
         android:text="@string/select_category_color_btn"
         android:layout_marginTop="12dp"
+        android:textAllCaps="false"
         app:layout_constraintStart_toEndOf="@id/image_category_color"
         app:layout_constraintTop_toBottomOf="@id/category_name_layout"
         app:layout_constraintEnd_toEndOf="@id/category_name_layout"/>
@@ -119,6 +120,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="8dp"
         android:textColor="@color/gray"
+        android:textAllCaps="false"
         style="@style/Widget.MaterialComponents.Button.TextButton"
         android:text="@string/cancel"
         app:layout_constraintEnd_toStartOf="@+id/btn_ok"
@@ -129,6 +131,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
+        android:textAllCaps="false"
         android:text="@string/save"
         style="@style/Widget.MaterialComponents.Button.TextButton"
         app:layout_constraintBottom_toBottomOf="@+id/btn_cancel"
